--- a/model_config.json
+++ b/model_config.json
@@ -1,7 +1,7 @@
 {
   "command": "train",
   "gpu": 7,
-  "log_directory": "testing_script",
+  "path_output": "testing_script",
   "debugging": false,
   "model_name": "unit_test",
   "object_detection_params": {
@@ -10,7 +10,7 @@
   "loader_parameters": {
     "target_suffix": ["_lesion-manual"],
     "roi_suffix": null,
-    "bids_path": "testing_data/",
+    "path_data": "testing_data/",
     "roi_params": {
       "suffix": null,
       "slice_filter_roi": null
